# Kinodynamic-Planning-and-Mapping-of-environments-using-Drones

./: README.md
OMPL_Env/2Dplanner/: CMakeLists.txt  CollisionChecking.cpp  drone.cpp  visualise.py
OMPL_Env/3Dplanner/: CMakeLists.txt  CollisionChecking.cpp  CollisionChecking.h  drone_3d.cpp  visualise.py
mp_project_ws/: motion_planning_5.bt
mp_project_ws/.catkin_tools/profiles/default/: devel_collisions.txt
mp_project_ws/src/KinodynamicRRT/: CMakeLists.txt  README.md  package.xml
mp_project_ws/src/KinodynamicRRT/launch/: MappingSim.launch
mp_project_ws/src/KinodynamicRRT/src/: drone_3d.cpp
